@@ -86,9 +86,10 @@ Web server: <classname>apache2</classname>.
 </para></note>
 <para>
 
-Once you've selected your tasks, select &BTN-CONT;. At this
-point, <command>aptitude</command> will install the packages that are part
-of the tasks you've selected.
+Once you've selected your tasks, select &BTN-CONT;. At this point,
+<command>aptitude</command> will install the packages that are part
+of the selected tasks. If a particular program needs more information
+from the user, it will prompt you during this process.
 
 </para>
 <note><para>
@@ -114,13 +115,6 @@ more recent than the one included on the CD-ROM. If you are installing
 the stable distribution, this can happen after a point release (an update
 of the original stable release); if you are installing the testing
 distribution this will happen if you are using an older image.
-
-</para><para>
-
-Each package you selected with <command>tasksel</command> is downloaded,
-unpacked and then installed in turn by the <command>apt-get</command> and
-<command>dpkg</command> programs. If a particular program needs more
-information from the user, it will prompt you during this process.
 
 </para>
    </sect3>
