@@ -47,6 +47,7 @@ installation-guide (2008xxxx) UNRELEASED; urgency=medium
     installer. Closes: #500206, #500283.
   * Update preconfiguration section for latest changes in the preseed udebs
     and clarify preseeding of language/country.
+  * Remove duplicated text about using tasksel. Closes: #502773.
 
  -- Frans Pop <fjp@debian.org>  Mon, 06 Oct 2008 00:26:26 +0200
 
